trunk/Archive2/ba/b7ee92bb346b2a/output
main.cpp:5:12: error: elaborated type refers to a typedef
    struct foo x;
           ^
main.cpp:1:24: note: declared here
typedef struct foo2 {} foo;
                       ^
1 error generated.
