trunk/Archive2/ba/b7ee92bb346b2a/main.cpp
typedef struct foo2 {} foo;

int main() {
    void foo();
    struct foo x;
}